<resources>
    <string name="app_name">DoorLock</string>
    <string name="Plus_add">+</string>
    <string name="MyAdress">Мои адреса</string>
    <string name="MyLocks">Мои замки</string>
    <string name="textEntrance">Вход</string>
    <string name="textLogin">Логин</string>
    <string name="textEmail">Почта</string>
    <string name="textName">Имя</string>
    <string name="textSurname">Фамилия</string>
    <string name="textBirthdate">Дата рождения</string>
    <string name="textPassword">Пароль</string>
    <string name="textRepeatPassword">Повторите пароль</string>
    <string name="textForgetPassword">Забыли пароль?</string>
    <string name="GetCode">Получить код</string>
    <string name="GetCodeTwice">Получить код повторно</string>
    <string name="GetCodeTimer">Получить код повторно через</string>
    <string name="RecoveryCode">Введите код</string>
    <string name="RemindPassword">Восстановить пароль</string>
    <string name="textRegistration">Зарегистрироваться</string>
    <string name="textRememberMe">Запомнить меня</string>
    <string name="status">Статус:</string>
    <string name="online">в сети</string>
    <string name="open">Открыть</string>
    <string name="RebootDevice">Перезагрузка устройства</string>
    <string name="ShowCode">Просмотр кода</string>
    <string name="Share">Поделиться доступом</string>
    <string name="additionally">Дополнительно</string>
    <string name="RenameLock">Переименовать замок</string>
    <string name="DescriptionRenameLock">Переименование вашего замка</string>
    <string name="HistoryAccess">История доступов</string>
    <string name="DescriptionHistoryAccess">Просмотр истории доступов к вашему замку</string>
    <string name="DeleteLock">Удалить замок</string>
    <string name="DescriptionDeleteLock">Удаление вашего замка со сбросом его до заводских настроек</string>
    <string name="offline">не в сети</string>
    <string name="Locks">Замков:</string>
    <string name="Profile">Профиль</string>
    <string name="Redaction">Редактировать</string>
    <string name="UserSettings">Настройки профиля</string>
    <string name="SaveAndPassword">Безопасность и пароль</string>
    <string name="Exit">Выйти</string>
    <string name="Save">Сохранить</string>
    <string name="Sex">Пол</string>
    <string name="Man">Мужской</string>
    <string name="Woman">Женский</string>
    <string name="PhoneNumber">Телефон</string>
    <string name="Address">Адрес</string>
    <string name="Add">Добавить</string>
</resources>