<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:ignore="MissingAutofill">

    <ImageView
        android:id="@+id/Image_button_back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="31dp"
        android:padding="9dp"
        android:clickable="true"
        android:focusable="true"
        android:importantForAccessibility="no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow" />

    <TextView
        android:id="@+id/textAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/textRegistration"
        android:textColor="@color/dark"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Image_button_back" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAdd">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editText_Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/edittext_background"
                android:ems="10"
                android:hint="@string/textName"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="56dp"
                android:textColorHint="#757575"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editText_Surname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/edittext_background"
                android:ems="10"
                android:hint="@string/textSurname"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="56dp"
                android:textColorHint="#757575"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText_Name" />

            <EditText
                android:id="@+id/editText_BirthDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/edittext_background"
                android:clickable="true"
                android:ems="10"
                android:focusable="true"
                android:hint="@string/textBirthdate"
                android:importantForAutofill="no"
                android:inputType="date"
                android:minHeight="56dp"
                android:textColorHint="#757575"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText_Surname" />

            <LinearLayout
                android:id="@+id/LinearLayout_Sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText_BirthDate">

                <TextView
                    android:id="@+id/text_Sex"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Sex"
                    android:textColor="@color/dark" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioButton_Man"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:text="@string/Man"
                        android:textColor="@color/dark" />

                    <RadioButton
                        android:id="@+id/radioButton_Woman"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Woman"
                        android:textColor="@color/dark" />
                </LinearLayout>
            </LinearLayout>

            <EditText
                android:id="@+id/editText_PhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/edittext_background"
                android:ems="10"
                android:hint="@string/PhoneNumber"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:minHeight="56dp"
                android:textColorHint="#757575"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/LinearLayout_Sex" />

            <EditText
                android:id="@+id/editText_Login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/edittext_background"
                android:ems="10"
                android:hint="@string/textLogin"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="56dp"
                android:textColorHint="#757575"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText_PhoneNumber" />

            <EditText
                android:id="@+id/editText_Email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/edittext_background"
                android:ems="10"
                android:hint="@string/textEmail"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:minHeight="56dp"
                android:textColorHint="#757575"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText_Login" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText_Email">

                <TextView
                    android:id="@+id/textForTimer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:text="@string/GetCode"
                    android:textColor="@color/dark" />
            </LinearLayout>

            <EditText
                android:id="@+id/editText_RecoveryCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/edittext_background"
                android:clickable="false"
                android:ems="10"
                android:enabled="false"
                android:focusable="auto"
                android:focusableInTouchMode="false"
                android:hint="@string/RecoveryCode"
                android:importantForAutofill="no"
                android:textColorHint="#757575"
                android:inputType="text"
                android:minHeight="56dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_Password_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/dark"
                android:textColorHint="#757575"
                app:boxBackgroundMode="none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText_RecoveryCode">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_RemindPassword_1"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_background"
                    android:gravity="center_vertical"
                    android:hint="@string/textPassword"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:textColorHint="#757575"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_Password_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:endIconTint="@color/dark"
                android:textColorHint="#757575"
                app:endIconMode="password_toggle"
                app:boxBackgroundMode="none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout_Password_1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_RemindPassword_2"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_background"
                    android:gravity="center_vertical"
                    android:hint="@string/textRepeatPassword"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_Save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:layout_marginBottom="64dp"
                android:backgroundTint="@color/dark"
                android:text="@string/Save"
                android:textColor="@color/white"
                android:textColorLink="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout_Password_2" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>