<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <ImageView
        android:id="@+id/Image_button_back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="31dp"
        android:padding="9dp"
        android:clickable="true"
        android:focusable="true"
        android:importantForAccessibility="no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow" />

    <TextView
        android:id="@+id/textAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/RemindPassword"
        android:textColor="@color/dark"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Image_button_back" />

    <EditText
        android:id="@+id/editText_RemindLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:hint="@string/textEmail"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="56dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAdd" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_RemindLogin">

        <TextView
            android:id="@+id/textForTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/GetCode"
            android:textColor="@color/dark" />

        <TextView
            android:id="@+id/textTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/dark" />
    </LinearLayout>

    <EditText
        android:id="@+id/editText_RecoveryCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/edittext_background"
        android:clickable="false"
        android:ems="10"
        android:enabled="false"
        android:focusable="auto"
        android:focusableInTouchMode="false"
        android:hint="@string/RecoveryCode"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="56dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_Password_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/dark"
        android:textColorHint="#757575"
        app:boxBackgroundMode="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_RecoveryCode">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_RemindPassword_1"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_background"
            android:gravity="center_vertical"
            android:hint="@string/textPassword"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_Password_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:endIconTint="@color/dark"
        android:textColorHint="#757575"
        app:endIconMode="password_toggle"
        app:boxBackgroundMode="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_Password_1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_RemindPassword_2"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_background"
            android:gravity="center_vertical"
            android:hint="@string/textRepeatPassword"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_Save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:backgroundTint="@color/dark"
        android:text="@string/Save"
        android:textColor="@color/white"
        android:textColorLink="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_Password_2" />

</androidx.constraintlayout.widget.ConstraintLayout>