<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/rounded_background"
            android:elevation="15dp"
            android:padding="20dp">

            <TextView
                android:id="@+id/text_Entrance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/textEntrance"
                android:textColor="@color/dark"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editText_Login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:background="@drawable/edittext_background"
                android:ems="10"
                android:hint="@string/textLogin"
                android:inputType="text"
                android:minHeight="56dp"
                android:textColorHint="#757575"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_Entrance"
                tools:ignore="LabelFor" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_Password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/dark"
                android:textColorHint="#757575"
                app:boxBackgroundMode="none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText_Login">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_Password"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_background"
                    android:gravity="center_vertical"
                    android:hint="@string/textPassword"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:textColorHint="#757575" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_Entrance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/dark"
                android:text="@string/textEntrance"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ForgetPasswordField"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <FrameLayout
                android:id="@+id/ForgetPasswordField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:focusable="true"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/RegistrationField">

                <TextView
                    android:id="@+id/text_ForgetPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="10dp"
                    android:text="@string/textForgetPassword"
                    android:textSize="16sp"
                    tools:ignore="TouchTargetSizeCheck" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/RegistrationField"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:focusable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frameLayout6"
                tools:ignore="TouchTargetSizeCheck">

                <TextView
                    android:id="@+id/text_Registration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="10dp"
                    android:text="@string/textRegistration"
                    android:textSize="16sp"
                    tools:ignore="TouchTargetSizeCheck" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/frameLayout6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout_Password">

                <CheckBox
                    android:id="@+id/SaveMe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textRememberMe"
                    android:textSize="12sp" />

            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>